grammar.js
    module: $ => repeat($._statement),

    _statement: $ => choice(
      $._simple_statements,
      $._compound_statement,
    ),

    // Simple statements

    import_statement: $ => seq(
      'import',
      $._import_list,
    ),

    _import_list: $ => seq(
      optional($.import_prefix),
      field('name', choice(
        $.dotted_name,
        $.aliased_import,
      )),
    ),

    if_statement: $ => choice(seq(
      'if',
      field('condition', $.expression),
      ':',
      field('consequence', $._suite),
      repeat(field('alternative', $.elif_clause)),
      optional(field('alternative', $.else_clause)),
    ),
      seq(
        field('condition',$.expression),
        ',',
        field('error_message', $.string),
    ),
      seq(
        field('expr1',$.expression),
        'if',
        field('condition',$.expression),
      )),

    elif_clause: $ => seq(
      'elif',
      field('condition', $.expression),
      ':',
      field('consequence', $._suite),
    ),

    schema_expr: $ => seq(
      field('operand_name', $.identifier),
      optional(seq(
        '(',
        optional($.argument_list),
        ')'
      )),
      $.dict_expr,
    ),

    type_alias_statement: $ => prec.dynamic(1, seq(
      'type',
      $.type,
      '=',
      $.type,
    )),

    schema_statement: $ => prec.left(seq(
      'schema',
      field('name', $.parameter),
      ':',
      field('body', $._suite),
    )),

    argument_list: $ => seq(
      '(',
      optional(commaSep1(
        choice(
          $.expression,
          $.keyword_argument,
        ),
      )),
      optional(','),
      ')',
    ),

    _suite: $ => choice(
      alias($._simple_statements, $.block),
      seq($._indent, $.block),
      alias($._newline, $.block),
    ),

    block: $ => seq(
      repeat($._statement),
      $._dedent,
    ),

    dotted_name: $ => prec.left(2, sep1($.identifier, choice('?.','.',))),

    // Patterns

    as_expression: $ => prec.left(seq(
      $.expression,
      'as',
      field('alias', $.expression),
    )),

    comparison_operator: $ => prec.left(2, seq(
      choice($.primary_expression,$.identifier,$.dotted_name, $.selector_expression),
      repeat1(seq(
        field('operators',
          choice(
            '<',
            '<=',
            '==',
            '!=',
            '>=',
            '>',
            'in',
            alias(seq('not', 'in'), 'not in'),
            'is',
            alias(seq('is', 'not'), 'is not'),
          )),
        $.primary_expression,
      )),
    )),

    assignment: $ => seq(
      field('left', $.dotted_name),
      choice(
        seq('=', field('right', choice($.dotted_name,$.expression,))),
        seq(':', field('type', $.type), '=', field('right', $.expression)),
        alias(seq(':',field('type', $.type)),'null_assignment'),
      ),
    ),

    attribute: $ => prec.right(11, seq(
      field('name', $.identifier),
      optional(seq(
        field('is_mutable', $.isMutableFlag),
        field('type', choice($.type, $.union_type)),
        optional(seq('=', field('value', $.expression)))
      ))
    )),
    
    call: $ => prec(PREC.call, seq(
      field('function', $.primary_expression),
      field('arguments', $.argument_list),
    )),

    typed_parameter: $ => prec(PREC.typed_parameter, choice(seq(
      $.identifier,
      ':',
      field('type', $.type),
    ),
    // for schema argument type annotation
    prec.left(seq(
      $.identifier,
      '[',
      $.identifier,
      ':',
      field('type',$.type),
      ']',
    )))),

    // Types

    type: $ => choice(
      $.schema_type,
      $.union_type,
      $.function_type,
      $.basic_type,
      $.list_type,
      $.dict_type,
      $.literal_type,
    ),
    schema_type: $ => $.dotted_name,
    union_type: $ => prec.left(seq($.type, repeat1(prec.left(seq('|', $.type))))),
    basic_type: _ => choice('str', 'int', 'float', 'bool', 'any'),
    list_type: $ => prec.left(seq('[', optional($.type), ']')),
    dict_type: $ => prec.left(seq('{', optional($.type), ':', optional($.type), '}')),
    literal_type: $ => choice($.string, $.float, $.integer, $.true, $.false),
    // Arguments

    list: $ => seq(
      '[',
      optional($._collection_elements),
      ']',
    ),

    dictionary: $ => prec(2, seq(
      '{',
      optional(commaSep1(choice($.pair, $.dictionary_splat))),
      optional(','),
      '}'
    )),

    dict_expr: $ => seq(
      '{',
      repeat(seq(
        choice($.pair, $.dictionary_splat),
        optional(',')
      )),
      '}',
    ),

    pair: $ => seq(
      field('key', $.expression),
      choice(':', '=', '+='),
      field('value', $.expression),
    ),

    _collection_elements: $ => prec(1, commaSep1(choice(
      $.expression, $.list_splat,
    ))),

    string: $ => seq(
      $.string_start,
      repeat($.string_content),
      $.string_end,
    ),

    string_content: $ => prec.right(repeat1(
      choice(
        $.escape_interpolation,
        $.escape_sequence,
        $._not_escape_sequence,
        $._string_content,
      ))),

    _not_escape_sequence: _ => token.immediate('\\'),

    _string_content: _ => token.immediate(/[^\\{}]+/),

    integer: $ => token(choice(
      seq(
        choice('0x', '0X'),
        repeat1(/_?[A-Fa-f0-9]+/),
      ),
      seq(
        choice('0o', '0O'),
        repeat1(/_?[0-7]+/),
      ),
      seq(
        choice('0b', '0B'),
        repeat1(/_?[0-1]+/),
      ),
      seq(
        repeat1(/[0-9]+_?/),
        field('multiplier', optional(choice('n', 'u', 'm', 'k', 'K', 'M', 'G', 'T', 'P', 'Ki', 'Mi', 'Gi', 'Ti', 'Pi'))),
      ),
    )),

    float: _ => {
      const digits = repeat1(/[0-9]+_?/);
      const exponent = seq(/[eE][\+-]?/, digits);

      return token(seq(
        choice(
          seq(digits, '.', optional(digits), optional(exponent)),
          seq(optional(digits), '.', digits, optional(exponent)),
          seq(digits, exponent),
        ),
      ));
    },

    identifier: _ => /[_$a-zA-Z][_$\p{XID_Continue}]*/,

    true: _ => 'True',
